# selectml

./: .bumpversion.cfg  .gitignore  Dockerfile  MANIFEST.in  README.md  environment.yml  mypy.ini  run.sbatch  run_selectml.sbatch  run_selectml_gpu.sbatch  setup.cfg  tox.ini
.github/workflows/: python-package.yml
examples/: plot_classifier.py  plot_template.py  plot_transformer.py
pipeline/: aws_compute.config  aws_ram.config  main.nf  nimbus.config  run_zeus.sbatch  zeus.config
src/selectml/: __init__.py  exitcodes.py  higher.py  main.py  study.py
src/selectml/bglr/: __init__.py  wrapper.py
src/selectml/data/: __init__.py  basic.tsv
src/selectml/gemma/: __init__.py  wrapper.py
src/selectml/optimiser/: cv.py  optimise.py  runners.py  stats.py  wrapper.py
src/selectml/sk/: compose.py  distance.py  feature_selection.py  metrics.py  optimise.py  preprocessor.py  weighting.py
src/selectml/sk/fixes/: sklearn_coltransformer.py
src/selectml/sk/optimise/: base.py  bglr.py  models.py
src/selectml/subcommands/: evaluate.py  gen_test_data.py  model_enum.py  optimise.py  optimise_init.py  predict.py
src/selectml/tf/: __init__.py  layers.py  losses.py  models.py  regularizers.py  wrapper.py
