[metadata]
name = selectml
version = 0.0.1
author = Darcy Jones
author_email = darcy.ab.jones@gmail.com
description = "A package for performing and optimising genomic selection using machine learning."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darcyabjones/selectml
project_urls =
    Bug Tracker = https://github.com/darcyabjones/selectml/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
zip_safe = False
install_requires =
    scipy
    numpy
    pandas
    scikit-learn
    tensorflow
    xgboost
    optuna
    ngboost
    fastcluster
    rpy2
    dataclass

tests_require =
    pytest
    pytest-cov
    tox

[options.extras_require]
docs =
    sphinx
    sphinx-gallery
    sphinx_rtd_theme
    numpydoc
    matplotlib
dev =
    pytest
    pytest-cov
    tox
    mypy
    pandas
    jupyter

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    selectml = selectml.main:main

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER
